# rss-aggregator

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.web  LICENSE  README.md  agentdb.rvf  cloudbuild.yaml  docker-compose.yml  e2e_feature_flags.py  inspect_dialog.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rss-sidecar-aarch64-apple-darwin.spec  verify_feature_flags.py
.firecrawl/: combobox-patterns.md  cron-job-org.md  cron-ui-design.json  cronstrue-github.md  cronstrue-npm.md  crontab-guru.md  linear-app.md  multiselect-patterns.json  radix-combobox.md  radix-vue-checkbox.md  radix-vue-dropdown-menu.md  radix-vue-home.md  radix-vue-listbox.md  radix-vue-select.md  schedule-ui-patterns.json  search-combobox-examples.json  search-cron-job-org.json  search-cron-libs.json  search-cron-parser.json  search-cron-ui-ux.json  search-cronstrue.json  search-dropdown-checkbox.json  search-github-cron.json  search-radix-vue-multiselect.json  search-radix-vue-select.json  shadcn-combobox.md  tailwindui-select-menus.md  time-picker-ux.md  time-selection-ui.json  vue-multiselect.json  vue-schedule-selector.json  vue-tailwind-multiselect.md  vueform-multiselect.md
.playwright-mcp/: page-2026-04-02T01-11-05-156Z.yml  page-2026-04-02T01-13-11-032Z.yml  page-2026-04-02T01-16-15-103Z.yml  page-2026-04-17T06-36-00-110Z.yml  page-2026-04-17T06-36-22-962Z.yml  page-2026-04-17T06-37-56-015Z.yml  page-2026-04-17T10-08-10-504Z.yml  page-2026-04-21T05-36-26-757Z.yml
alembic/: env.py
app-Keys-Page-should-delete-an-API-key-chromium/: error-context.md  video.webm
app-Keys-Page-should-delete-an-API-key-chromium-retry1/: error-context.md  video.webm
docker/: nginx.conf
feature-flags-Feature-Flag-22465-and-Schedules-auto-disabled-chromium/: video.webm
feature-flags-Feature-Flag-22465-and-Schedules-auto-disabled-chromium-retry1/: error-context.md  video.webm
feature-flags-Feature-Flag-4d454-sponsive-on-mobile-viewport-chromium/: error-context.md  video.webm
feature-flags-Feature-Flag-4d454-sponsive-on-mobile-viewport-chromium-retry1/: video.webm
feature-flags-Feature-Flag-b0db0-ed-and-all-controls-visible-chromium/: video.webm
feature-flags-Feature-Flag-b0db0-ed-and-all-controls-visible-chromium-retry1/: video.webm
feature-flags-Feature-Flag-c5296-changes-survive-page-reload-chromium/: video.webm
feature-flags-Feature-Flag-c5296-changes-survive-page-reload-chromium-retry1/: video.webm
feature-flags-Feature-Flag-d6ce7-tays-ON-when-Cancel-clicked-chromium/: video.webm
feature-flags-Feature-Flag-d6ce7-tays-ON-when-Cancel-clicked-chromium-retry1/: video.webm
scripts/: build-all.sh  build-sidecar.sh  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src-tauri/src/interceptor/: handler.rs  mod.rs  response.rs
src-tauri/src/preview/: mod.rs
src-tauri/src/setup/: config.rs  database.rs  mod.rs
src-tauri/src/sidecar/: client.rs  mod.rs  process.rs
(+445 files in other folders)
