[project]
name = "rss-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite",
    "alembic",
    "fastapi",
    "feedparser",
    "httpx",
    "pydantic-settings",
    "python-multipart",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
