[project]
name = "rss-aggregator"
version = "0.19.0"
description = "FastAPI-based RSS feed aggregator with source management, scheduled fetching, and filtering"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Kimhsiao", email = "white.shopping@gmail.com" }
]
dependencies = [
    "aiosqlite",
    "alembic",
    "fastapi",
    "feedparser",
    "greenlet>=3.3.2",
    "httpx",
    "pydantic-settings",
    "pyzipper>=0.3.6",
    "python-multipart",
    "sqlalchemy",
    "uvicorn[standard]",
    "croniter>=6.2.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pyinstaller>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
