[package]
name = "rss-aggregator"
version = "0.17.0"
authors = ["Kimhsiao <white.shopping@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
urlencoding = "2"
chrono = "0.4"
http = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
